<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_title1"
        android:title="@string/trangchu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_data"
                    android:icon="@drawable/ic_data_hangngay"
                    android:title="@string/dulieu" />


                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/lichsu" />

            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_title2"
        android:title="@string/theodoi">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_keogian"
                    android:icon="@drawable/ic_strengt"
                    android:title="@string/keogian" />

                <item
                    android:id="@+id/nav_weight"
                    android:icon="@drawable/ic_weight"
                    android:title="@string/theodoicannang" />

                <item
                    android:id="@+id/nav_heath"
                    android:icon="@drawable/ic_heath"
                    android:title="@string/thosau" />

            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_title3"
        android:title="@string/caidat"

        >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/caidat" />

            </group>
        </menu>
    </item>
</menu>